--- a/src/web/index.html
+++ b/src/web/index.html
@@ -37,14 +37,13 @@
   <!-- Firebase Configuration -->
   <script>
     var firebaseConfig = {
-      apiKey: "",
-      authDomain: "easyayurved.firebaseapp.com",
-      databaseURL: "https://easyayurved.firebaseio.com",
-      projectId: "easyayurved",
-      storageBucket: "easyayurved.appspot.com",
-      messagingSenderId: "",
-      appId: "",
-      measurementId: ""
+      apiKey: "AIzaSyAMFb8k3iF-gTVAbPIhBNqAhXUpEO4Sris",
+      authDomain: "medipro-5ed85.firebaseapp.com",
+      projectId: "medipro-5ed85",
+      storageBucket: "medipro-5ed85.appspot.com",
+      messagingSenderId: "29567409790",
+      appId: "1:29567409790:web:e0619b92e6865a85a5022f",
+      measurementId: "G-C1YSKBX93Y"
     };
 
     // Initialize Firebase
